@@ -2,6 +2,7 @@
   o enable to (un)install os-prober (mga#16010, mga#18538)
   o fix reading back last grub2 entry
   o only overwrite GRUB_CMDLINE_LINUX_DEFAULT on first install (mga#18112)
+  o only overwrite install.sh when actually installing boot loader (mga#17455)
   o set GRUB_DEFAULT + GRUB_SAVEDEFAULT (mga#9627, mga#16059)
   o stop offering grub legacy & lilo on new installs (mga#18583)
 - running commands as user:
